# weavemuse

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_notagen_final.py
tests/: test_abstract_methods.py  test_chat_musician_tool.py  test_interface.py  test_music_generation.py  test_notagen_fixes.py  test_notagen_quantization_fix.py  test_quantized_notagen.py
weavemuse/: __init__.py  cli.py
weavemuse/agents/: __init__.py  agents_as_tools.py  models.py  music_agent.py
weavemuse/interfaces/: __init__.py  gradio_interface.py  gui.py  terminal_interface.py
weavemuse/models/notagen/: abc2xml.py  config.py  convert.py  inference.py  inference_quantized.py  instrument_mapping.json  model_manager.py  ms.py  quantization.py  quantize_notagen.py  standard_inst_names.txt  upload_to_hf.py  utils.py
weavemuse/tools/: __init__.py  audio_analysis_tool.py  audio_flamingo_tool.py  audio_flamingo_tool_clean.py  base_tools.py  chat_musician_tool.py  chat_musician_tool_fixed.py  chatmusician_tool.py  memory_manager.py  music_theory_tool.py  notagen_tool.py  stable_audio_tool.py  utils.py  verovio_tool.py  visit_webpage.py
weavemuse/utils/: __init__.py  config.py  gpu_utils.py
