[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weavemuse"
version = "0.1.0"
description = "A comprehensive music agent framework using smolagents for generation and understanding"
authors = [{name = "Emmanouil Karystinaios", email = "manoskaristineos@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["music", "ai", "agent", "generation", "understanding", "smolagents"]

dependencies = [
    "smolagents>=1.20.0",
    "gradio>=4.0.0",
    "gradio_pdf",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "diffusers>=0.25.0",
    "stable-audio-tools>=0.0.19",
    "symusic>=0.4.0",
    "music21>=9.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "huggingface-hub>=0.17.0",
    "accelerate>=0.21.0",
    "einops>=0.6.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "bitsandbytes>=0.46.1",
    "abctoolkit>=0.0.6",
    "samplings>=0.1.7",
    "pyparsing>=3.2.1",
    "PyMuPDF",
    "zero",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/manoskary/weavemuse"
Repository = "https://github.com/manoskary/weavemuse"

[project.scripts]
weavemuse = "weavemuse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["weavemuse*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
